Clicking on one of the options in the header menu will close the menu.

--- a/projects/storefront/src/app/core/components/header/header.component.html
+++ b/projects/storefront/src/app/core/components/header/header.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <!-- Collapsible Menu Content (Nav + Search) -->
-    <div class="mobile-menu-content" [class.open]="isMobileMenuOpen">
+    <div class="mobile-menu-content" [class.open]="isMobileMenuOpen$ | async">
       <app-navigation class="navigation"></app-navigation>
       <app-search-bar class="search-bar"></app-search-bar>
     </div>
