--- a/projects/storefront/src/app/core/components/navigation/navigation.component.html
+++ b/projects/storefront/src/app/core/components/navigation/navigation.component.html
@@ -1,9 +1,9 @@
 <nav class="main-navigation" *ngIf="currentStoreSlug$ | async as storeSlug">
   <ul>
-    <li><a [routerLink]="['/', storeSlug]" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a></li>
-    <li><a [routerLink]="['/', storeSlug, 'shop']" routerLinkActive="active">Shop</a></li>
-    <li><a [routerLink]="['/', storeSlug, 'about']" routerLinkActive="active">About</a></li>
-    <li><a [routerLink]="['/', storeSlug, 'contact']" routerLinkActive="active">Contact</a></li>
+    <li><a [routerLink]="['/', storeSlug]" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="closeMenuOnClick()">Home</a></li>
+    <li><a [routerLink]="['/', storeSlug, 'shop']" routerLinkActive="active" (click)="closeMenuOnClick()">Shop</a></li>
+    <li><a [routerLink]="['/', storeSlug, 'about']" routerLinkActive="active" (click)="closeMenuOnClick()">About</a></li>
+    <li><a [routerLink]="['/', storeSlug, 'contact']" routerLinkActive="active" (click)="closeMenuOnClick()">Contact</a></li>
     <!-- Add other links as needed -->
   </ul>
 </nav>
