--- a/projects/storefront/src/app/app.component.html
+++ b/projects/storefront/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <main style="overflow-x: hidden;">
   <router-outlet></router-outlet>
+  <app-notification-toast></app-notification-toast>
 </main>
 
 <app-footer></app-footer>
