--- a/projects/storefront/src/app/cart/cart-page/cart-page.component.html
+++ b/projects/storefront/src/app/cart/cart-page/cart-page.component.html
@@ -19,7 +19,7 @@
             <tr *ngFor="let item of cartState.items" class="cart-item">
               <td class="item-image">
                 <a [routerLink]="['/product', item.product.id]">
-                  <img [src]="item.product.imageUrl || '/assets/images/placeholder.png'" [alt]="item.product.name">
+                  <img [src]="item.product.imageUrls[0] || '/assets/images/placeholder.png'" [alt]="item.product.name">
                 </a>
               </td>
               <td class="item-details">
