--- a/projects/storefront/src/app/shared/components/product-card/product-card.component.html
+++ b/projects/storefront/src/app/shared/components/product-card/product-card.component.html
@@ -2,7 +2,7 @@
   <!-- Make the link conditional, but display content regardless -->
   <a [routerLink]="storeSlug ? ['/', storeSlug, 'product', product.id] : null" class="product-link">
     <div class="product-image-container">
-      <img [src]="product.imageUrl || '/assets/images/placeholder.png'"
+      <img [src]="product.imageUrls[0] || '/assets/images/placeholder.png'"
            [alt]="product.name"
            class="product-image">
     </div>
