Add cart notification feature with auto-hide functionality

--- a/projects/storefront/src/app/app.component.html
+++ b/projects/storefront/src/app/app.component.html
@@ -3,5 +3,9 @@
 <main style="overflow-x: hidden;">
   <router-outlet></router-outlet>
 </main>
+<!-- Cart Notification -->
+<div *ngIf="showCartNotification" class="cart-notification">
+  Item successfully added to cart.
+</div>
 
 <app-footer></app-footer>
