--- a/projects/storefront/src/app/core/components/header/header.component.scss
+++ b/projects/storefront/src/app/core/components/header/header.component.scss
@@ -214,6 +214,8 @@
       flex-direction: column;
       gap: var(--spacing-md);
     }
+  }
+}
 
 // Style the mobile menu container
 .mobile-menu-content {
