--- a/projects/storefront/src/app/product/product-page/product-page.component.scss
+++ b/projects/storefront/src/app/product/product-page/product-page.component.scss
@@ -123,14 +123,14 @@
 }
 
 .product-info-section {
+  display: flex;
+  flex-direction: column;
+  gap: #{var(--spacing-lg)};
+
   @media (min-width: 992px) {
     width: 50%;
     flex-shrink: 0;
   }
-
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing-lg);
 
   .product-name {
     font-size: clamp(1.75rem, 5vw, 2rem);
